--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.11",
-    "expo-status-bar": "~1.6.0",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "axios": "^1.5.0",
+    "expo": "^49.0.11",
+    "expo-status-bar": "^1.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
