--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.5.0",
     "expo": "^49.0.11",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "^1.6.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-heroicons": "^3.2.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-snap-carousel": "^1.3.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
