--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.5.0",
     "expo": "^49.0.11",
@@ -19,6 +21,8 @@
     "react-native": "0.72.4",
     "react-native-heroicons": "^3.2.0",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^13.9.0"
   },
