--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-status-bar": "^1.6.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.5",
     "react-native-heroicons": "^3.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
